@@ -191,12 +191,13 @@ int kmk_builtin_command_parsed(int argc, char **argv)
         rc = kmk_builtin_ln(argc, argv, environ);
     else if (!strcmp(pszCmd, "mkdir"))
         rc = kmk_builtin_mkdir(argc, argv, environ);
-    //else if (!strcmp(pszCmd, "mv"))
-    //    rc = kmk_builtin_mv(argc, argv, environ);
+    else if (!strcmp(pszCmd, "mv"))
+        rc = kmk_builtin_mv(argc, argv, environ);
     else if (!strcmp(pszCmd, "rm"))
         rc = kmk_builtin_rm(argc, argv, environ);
     else if (!strcmp(pszCmd, "rmdir"))
         rc = kmk_builtin_rmdir(argc, argv, environ);
+    /* rarely used commands: */
     else if (!strcmp(pszCmd, "cat"))
         rc = kmk_builtin_cat(argc, argv, environ);
     else if (!strcmp(pszCmd, "cp"))
